--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header id="header">
         <h1>Weather Dashboard</h1>
     </header>
-
+    <main>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3 bg-light">
+            <div class="col-lg-3">
                 <h2 id="city-heading" class="mt-1">Search for a City:</h2>
                 <div class="input-group mb-3">
                     <input id="enter-city" type="text" class="form-control" placeholder="City" aria-label="Enter a city">
@@ -50,7 +50,7 @@
                         <h3>5-Day Forecast</h3>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="five-day-forcast">
                     <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
                     <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
                     <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
@@ -64,12 +64,12 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+    
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./assets/script.js"></script>
 </body>
-
+</main>
 </html>
 
 
