--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
     <main>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-3">
-                <h2 id="city-heading" class="mt-1">Search for a City:</h2>
+            <div class="col-lg-3" id="aside">
+                <!-- <h2 id="city-heading" class="mt-1">Search for a City:</h2> -->
                 <div class="input-group mb-3">
-                    <input id="enter-city" type="text" class="form-control" placeholder="City" aria-label="Enter a city">
+                    <input id="enter-city" type="text" class="form-control" placeholder="City Search" aria-label="Enter a city">
+            </div>
                     <div class="input-group-append">
-                      <button id="search-button" class="btn btn-outline-success" type="submit">Search</button>
+                    <button id="search-button" class="btn btn-outline-success" type="submit">Search</button>
                             <!-- <i class="fas fa-search"></i> -->
                         </button>
                     </div>
-                </div>
+               
                 <button class="btn btn-primary mb-3" type="button" id="clear-history">Clear history</button>
+                <h3>Search History</h3>
                 <form id="history"></form>
             </div>
             <div class="col-lg-9">
@@ -51,11 +53,11 @@
                     </div>
                 </div>
                 <div class="row" id="five-day-forcast">
-                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
-                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
-                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
-                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
-                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                    <div class="col-md-2 forecast text-white m-2 rounded"></div>
+                    <div class="col-md-2 forecast text-white m-2 rounded"></div>
+                    <div class="col-md-2 forecast text-white m-2 rounded"></div>
+                    <div class="col-md-2 forecast text-white m-2 rounded"></div>
+                    <div class="col-md-2 forecast text-white m-2 rounded"></div>
                 </div>
             </div>
         </div>
