added notes to script.js

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                             <!-- <i class="fas fa-search"></i> -->
                         </button>
                     </div>
-               
+            
                 <button class="btn btn-primary mb-3" type="button" id="clear-history">Clear history</button>
                 <h3>Search History</h3>
                 <form id="history"></form>
             </div>
             <div class="col-lg-9">
                 <div class="row mr-0">
-                    <div class="col-lg-11 card m-3 weather-1" id="today-weather">
+                    <div class="col-lg-11 card m-3 weather-1" id="current-weather">
                         <div class="card-body">
                             <h3 id="city-name" class="city-name align-middle"></h3>
                             <img id="current-pic" alt="">
